# open-supervisor

./: .gitignore  AGENTS.md  AGENT_MEMORY.md  CONTRIBUTING.md  README.md  compose.yml  package.json
.github/workflows/: release.yml
.opencode/plugin/: roadmap-lifecycle.ts
.sisyphus/: ralph-loop.local.md
crates/orchestrator-cli/: Cargo.toml
crates/orchestrator-cli/src/: main.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: constants.rs  error.rs  lib.rs
crates/orchestrator-core/src/config/: mod.rs  schema.rs
docs/: DEVELOPERS_NOTE.md  SYSTEM_ARCHITECTURE.md
docs/plans/: ROADMAP.md  goals.md  scaffolding.md
examples/: README.md
scripts/: cleanup-plugin.mjs  postinstall.ts  preuninstall.ts  run-install-hook.mjs  sync-readme-version.mjs
src/: index.ts
src/agents/: definitions.ts
src/core/loop/: circuit-breaker.ts  compaction-guard.ts  mission-loop-handler.ts  mission-loop.ts  progress-tracker.ts  session-state-store.ts  todo-continuation.ts  verification.ts
src/plugin-handlers/: session-compacting-handler.ts  system-transform-handler.ts  tool-execute-handler.ts
src/shared/: index.ts
src/tools/: slashCommand.ts
tests/e2e/: json-rpc-bridge.test.ts
tests/harness/: builders.ts  fixture.ts  index.ts  mocks.ts
tests/unit/: harness-builders.test.ts  harness-fixture.test.ts  harness-mocks.test.ts  install-hooks.test.ts  os-notify.test.ts  postinstall.test.ts  preuninstall.test.ts  task-toast-manager.test.ts  toast-sanitizer.test.ts
user-prompt/: after-update.md  afterupdate.md  before.md  modulization.md  refactor.md
(+26 files in other folders)
