[package]
name = "orchestrator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI binary for OpenCode control-plane helper tools"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
